2-step-Move_the_ball

--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
     const canvas = document.getElementById('myCanvas');
     const ctx = canvas.getContext('2d');
 
+    let x = canvas.width /2,
+        y = canvas.height - 30;
+    const dx = 2,
+          dy = -2;
+
+    function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, 10, 0, Math.PI*2);
+        ctx.fillStyle = '#0095DD';
+        ctx.fill();
+        ctx.closePath();
+    }
+
+    function draw() {
+        ctx.clearRect(0,0, canvas.width, canvas.height)
+        drawBall();
+        x +=dx;
+        y +=dy;
+    }
+    setInterval(draw, 10);
+
     ctx.beginPath();
     ctx.rect(20,40,50,50);
     ctx.fillStyle = '#FF0000';
