--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
     let x = canvas.width /2,
         y = canvas.height - 30;
-    const dx = 2,
-          dy = -2;
+    let dx = 2,
+          dy = -2,
+          ballRadius = 10;
 
     function drawBall() {
         ctx.beginPath();
-        ctx.arc(x, y, 10, 0, Math.PI*2);
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
         ctx.fillStyle = '#0095DD';
         ctx.fill();
         ctx.closePath();
@@ -35,34 +36,18 @@
     function draw() {
         ctx.clearRect(0,0, canvas.width, canvas.height)
         drawBall();
+        if ((x + dx) > canvas.width - ballRadius || (x + dx) < ballRadius) {
+            dx = -dx;
+        }
+        if ((y + dy) > canvas.height - ballRadius || (y + dy) < ballRadius) {
+            dy = -dy;
+        }
+
         x +=dx;
         y +=dy;
     }
     setInterval(draw, 10);
 
-    ctx.beginPath();
-    ctx.rect(20,40,50,50);
-    ctx.fillStyle = '#FF0000';
-    ctx.fill();
-    ctx.closePath();
-
-    ctx.beginPath();
-    /*
-    * x и y координаты центра круга
-    * радиус
-    * начальный и конечный угол отрисовки круга (в радианах)
-    * направление отрисовки: (false - по часовой стрелке, по умолчанию, или true - против часовой стрелки). Последний параметр не обязательный.
-    * */
-    ctx.arc(240,160, 20, 0, Math.PI*2, false);
-    ctx.fillStyle = 'green';
-    ctx.fill();
-    ctx.closePath();
-
-    ctx.beginPath();
-    ctx.rect(160, 10, 100, 40);
-    ctx.fillStyle = 'rgba(0, 0, 255, 0.5)';
-    ctx.fill();
-    ctx.closePath();
 </script>
 
 </body>
