--- a/index.html
+++ b/index.html
@@ -20,10 +20,38 @@
     const ctx = canvas.getContext('2d');
 
     let x = canvas.width /2,
-        y = canvas.height - 30;
-    let dx = 2,
-          dy = -2,
-          ballRadius = 10;
+        y = canvas.height - 30,
+        dx = 2,
+        dy = -2;
+    const ballRadius = 10;
+
+    // Ракетка
+    const paddleHeight = 10,
+        paddleWidth = 75;
+    let paddleX = (canvas.width-paddleWidth)/2;
+
+    // nav buttons
+    let rightPressed = false,
+        leftPressed = false;
+
+    document.addEventListener("keydown", keyDownHandler, false);
+    document.addEventListener("keyup", keyUpHandler, false);
+
+    function keyDownHandler(e) {
+        if (e.keyCode === 39) {
+            rightPressed = true;
+        } else if (e.keyCode === 37) {
+            leftPressed = true;
+        }
+    }
+
+    function keyUpHandler(e) {
+        if (e.keyCode === 39) {
+            rightPressed = false;
+        } else if (e.keyCode === 37) {
+            leftPressed = false;
+        }
+    }
 
     function drawBall() {
         ctx.beginPath();
@@ -33,19 +61,40 @@
         ctx.closePath();
     }
 
+    function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+        ctx.fillStyle = '#0095DD'
+        ctx.fill();
+        ctx.closePath();
+    }
+
     function draw() {
         ctx.clearRect(0,0, canvas.width, canvas.height)
         drawBall();
+
         if ((x + dx) > canvas.width - ballRadius || (x + dx) < ballRadius) {
             dx = -dx;
         }
         if ((y + dy) > canvas.height - ballRadius || (y + dy) < ballRadius) {
             dy = -dy;
         }
+        console.log(rightPressed && paddleX < canvas.width-paddleWidth);
+        if(rightPressed && paddleX < canvas.width-paddleWidth) {
+            paddleX += 7;
+            console.log('rightPressed paddleX = ', paddleX);
+        }
+        else if(leftPressed && paddleX > 0) {
+            paddleX -= 7;
+            console.log('leftPressed paddleX = ', paddleX);
+        }
 
         x +=dx;
         y +=dy;
+
+        drawPaddle();
     }
+
     setInterval(draw, 10);
 
 </script>
