5-step-Build_the_brick_field

--- a/index.html
+++ b/index.html
@@ -76,10 +76,19 @@
         if ((x + dx) > canvas.width - ballRadius || (x + dx) < ballRadius) {
             dx = -dx;
         }
-        if ((y + dy) > canvas.height - ballRadius || (y + dy) < ballRadius) {
+
+        if ((y + dy) < ballRadius) {
             dy = -dy;
+        } else if ((y + dy) > canvas.height - ballRadius) {
+            if (x > paddleX && x < paddleX + paddleWidth) {
+                dy = -dy;
+            } else {
+                // alert('GAME OVER');
+                document.location.reload();
+                clearInterval();
+            }
         }
-        console.log(rightPressed && paddleX < canvas.width-paddleWidth);
+
         if(rightPressed && paddleX < canvas.width-paddleWidth) {
             paddleX += 7;
             console.log('rightPressed paddleX = ', paddleX);
@@ -95,7 +104,7 @@
         drawPaddle();
     }
 
-    setInterval(draw, 10);
+    let interval = setInterval(draw, 10);
 
 </script>
 
