--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
     let rightPressed = false,
         leftPressed = false;
 
+    // bricks params
+    const bricks = [],
+        brickRowCount = 3,
+        brickColumnCount = 5,
+        brickWidth = 75,
+        brickHeight = 20,
+        brickPadding = 10,
+        brickOffsetTop = 30,
+        brickOffsetLeft = 30;
+
+    for (let c = 0; c < brickRowCount; c++) {
+        bricks[c] = [];
+        for (let r = 0; r < brickColumnCount; r++) {
+            bricks[c][r] = {x: 0, y: 0};
+        }
+    }
+
+    function drawBricks() {
+        for (let c = 0; c < brickRowCount; c++) {
+            for (let r = 0; r < brickColumnCount; r++) {
+                let brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
+                let brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
+                bricks[c][r].x = brickX;
+                bricks[c][r].y = brickY;
+                ctx.beginPath();
+                ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                ctx.fillStyle = '#0095DD';
+                ctx.fill();
+                ctx.closePath();
+            }
+        }
+    }
+
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
 
@@ -71,6 +104,7 @@
 
     function draw() {
         ctx.clearRect(0,0, canvas.width, canvas.height)
+        drawBricks();
         drawBall();
 
         if ((x + dx) > canvas.width - ballRadius || (x + dx) < ballRadius) {
