7-step-Collision_detection

--- a/index.html
+++ b/index.html
@@ -44,25 +44,48 @@
         brickOffsetTop = 30,
         brickOffsetLeft = 30;
 
-    for (let c = 0; c < brickRowCount; c++) {
+    for (let c = 0; c < brickColumnCount; c++) {
         bricks[c] = [];
-        for (let r = 0; r < brickColumnCount; r++) {
-            bricks[c][r] = {x: 0, y: 0};
+        for (let r = 0; r < brickRowCount; r++) {
+            bricks[c][r] = {x: 0, y: 0, status:1};
         }
     }
 
     function drawBricks() {
-        for (let c = 0; c < brickRowCount; c++) {
-            for (let r = 0; r < brickColumnCount; r++) {
-                let brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
-                let brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
-                bricks[c][r].x = brickX;
-                bricks[c][r].y = brickY;
-                ctx.beginPath();
-                ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                ctx.fillStyle = '#0095DD';
-                ctx.fill();
-                ctx.closePath();
+        for (let c = 0; c < brickColumnCount; c++) {
+            for (let r = 0; r < brickRowCount; r++) {
+                if (bricks[c][r].status === 1) {
+                    let brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
+                    let brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
+                    bricks[c][r].x = brickX;
+                    bricks[c][r].y = brickY;
+                    ctx.beginPath();
+                    ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                    ctx.fillStyle = '#0095DD';
+                    ctx.fill();
+                    ctx.closePath();
+                }
+            }
+        }
+    }
+    /*
+    * Для того, чтобы центр шара находился внутри кирпича, все четыре из следующих утверждений должны быть верны:
+    *  - Координата X шара больше, чем координата X кирпича.
+    *  - Координата X шара меньше, чем  X-координата кирпича плюс его ширина.
+    *  - Координата Y шара больше, чем Y-координата кирпича.
+    *  - Координата Y шара меньше, чем Y-координата кирпича плюс его высота.
+    * */
+
+    function collisionDetection() {
+        for (let c = 0; c < brickColumnCount; c++) {
+            for (let r = 0; r < brickRowCount; r++) {
+                let b = bricks[c][r];
+                if (b.status === 1) {
+                    if (x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight ) {
+                        dy = -dy;
+                        b.status = 0;
+                    }
+                }
             }
         }
     }
@@ -106,6 +129,7 @@
         ctx.clearRect(0,0, canvas.width, canvas.height)
         drawBricks();
         drawBall();
+        collisionDetection();
 
         if ((x + dx) > canvas.width - ballRadius || (x + dx) < ballRadius) {
             dx = -dx;
